attempt to fix img not showing

--- a/styles/TNRHumane.css
+++ b/styles/TNRHumane.css
@@ -109,7 +109,7 @@
 
 @media screen and (min-width: 900px) {
   .digitalSketches {
-    background: url('../imagesUpdated/TNRProject/wireframeDesk.jpg');
+    background: url('../imagesUpdated/TNRProject/digitalwireframeDesk.jpg');
     background-size: cover;
   }
 
